--- a/index.html
+++ b/index.html
@@ -1,26 +1,1 @@
-<!DOCTYPE html>
-<html>
-
-<head lang="en">
-    <meta charset="UTF-8">
-    <meta name="author" content="Andrew Rodeghero">
-    <title>About Psst</title>
-</head>
-
-<h1>About Psst</h1>
-
-<h2>Psst is a new, exciting, messaging service like nothing you've seen before!</h2>
-
-<body>
-	<div class="paragraph">
-		<p>
-		Psst is a micro-blogging website created as an assignment for COMP249 at Macquarie University.
-		</p>
-		<p>
-		You must be logged in to make a post.
-		Messages up to 150 characters can be posted using Psst.
-		All Pssts are public and can be viewed at the <a href="/">Psst Home</a> page.
-		</p>
-	</div>
-</body>
-</html>
+<h1>Hello world!</h1>
